--- a/app/src/main/res/layout/gesture.xml
+++ b/app/src/main/res/layout/gesture.xml
@@ -14,5 +14,7 @@
     <android.gesture.GestureOverlayView
         android:id="@+id/gestureview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:fadeOffset="1000"
+        android:gestureColor="@android:color/holo_purple" />
 </FrameLayout>
